src/test/ui/proc-macro/derive-still-gated.stderr
error[E0658]: attributes of the form `#[derive_*]` are reserved for the compiler (see issue #29644)
  --> $DIR/derive-still-gated.rs:18:3
   |
LL | #[derive_A] //~ ERROR: attributes of the form `#[derive_*]` are reserved for the compiler
   |   ^^^^^^^^
   |
   = help: add #![feature(custom_derive)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
